# bbmodel-rs

./: Cargo.toml  README.md
assets/models/: pizza.bbmodel
examples/: pizza.rs
src/: animation.rs  collections.rs  element.rs  lib.rs  metadata.rs  texture.rs
src/bevy/: mod.rs
tests/: model_pizza.bbmodel
