[package]
name = "bbmodel-rs"
version = "0.1.1"
edition = "2024"
authors = ["Exotik850"]
description = "A Rust library for working with Blockbench model files (.bbmodel)."
keywords = ["parsing"]
license = "MIT"
readme = "README.md"

[dependencies]
glam = { version = "0.33.2", optional = true, features = [
  "serde",
], default-features = false }
serde = { version = "1.0.228", features = ["derive", "alloc"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3.21", default-features = false, features = ["macros"] }
uuid = { version = "1.23.4", features = ["serde"], default-features = false }

[features]
glam = ["dep:glam"]
default = ["std"]
std = ["serde/std", "serde_json/std", "uuid/std", "serde_with/std", "glam/std"]
